--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ services:
     container_name: postgres-sql-bsn
     image: postgres
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
+      POSTGRES_USER: username
+      POSTGRES_PASSWORD: password
       PGDATA: /var/lib/postgresql/data
       POSTGRES_DB: book_social_network
     volumes:
@@ -20,11 +20,10 @@ services:
     ports:
       - 1080:1080
       - 1025:1025
-
 networks:
   spring-demo:
     driver: bridge
 
 volumes:
-    postgres:
-     driver: local
+  postgres:
+    driver: local
